--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="to">
                     <p>To</p>
                     <div class="select-box">
-                        <img src="https://flagsapi.com/NP/flat/64.png" alt="">
+                        <img src="https://flagsapi.com/PK/flat/64.png" alt="">
                         <select name="to">
                         </select>
                     </div>
